--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Resume - Start Bootstrap Theme</title>
+    <title>Bhavesh Singh Meritya</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
 
     <!-- Font Awesome icons (free version)-->
